# SpaceInvaders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.txt
assets/: assetSources.txt
config/: colorAssets.ini  fontAssets.ini  gameStateKeyBinds.ini  soundAssets.ini  supportedKeys.ini  textureAssets.ini
lib/logger/: CMakeLists.txt  Color.cpp  Date.cpp  Formatter.cpp  Logger.cpp  Outputter.cpp  Record.cpp
lib/logger/include/: Color.h  Date.h  Formatter.h  Logger.h  Outputter.h  Record.h
logs/: logs.txt
src/: main.cpp
src/spaceInvaders/characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/spaceInvaders/characters/enemies/: BlueEnemy.cpp  BlueEnemy.h  GreenEnemy.cpp  GreenEnemy.h  PurpleEnemy.cpp  PurpleEnemy.h  YellowEnemy.cpp  YellowEnemy.h
src/spaceInvaders/core/: Application.cpp  Application.h
src/spaceInvaders/core/states/: GameState.cpp  GameState.h  LoadingGameState.cpp  LoadingGameState.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h  State.cpp  State.h
src/spaceInvaders/input/: Input.cpp  Input.h
src/spaceInvaders/managers/: AssetManager.cpp  AssetManager.h  EnemyFactory.cpp  EnemyFactory.h  EnemyManager.cpp  EnemyManager.h  ObjectManager.cpp  ObjectManager.h  SoundManager.cpp  SoundManager.h
src/spaceInvaders/objects/: Animation.cpp  Animation.h  Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  EnemyBullet.cpp  EnemyBullet.h  EnemyWeapon.cpp  EnemyWeapon.h  PlayerBullet.cpp  PlayerBullet.h  PlayerWeapon.cpp  PlayerWeapon.h  Weapon.cpp  Weapon.h
src/spaceInvaders/objects/bullets/: Bullet.cpp  Bullet.h  EnemyBullet.cpp  EnemyBullet.h  PlayerBullet.cpp  PlayerBullet.h
src/spaceInvaders/objects/powerUps/: HealthPowerUp.cpp  HealthPowerUp.h  PowerUp.cpp  PowerUp.h  ShieldPowerUp.cpp  ShieldPowerUp.h
src/spaceInvaders/objects/weapons/: EnemyWeapon.cpp  EnemyWeapon.h  PlayerWeapon.h  Weapon.cpp  Weapon.h
src/spaceInvaders/ui/: Button.cpp  Button.h  GameStateUI.cpp  GameStateUI.h
src/spaceInvaders/utilities/: FixedClock.cpp  FixedClock.h  Utils.cpp  Utils.h
